# Unitree-Go2-Edu

./: README.md
install/: local_setup.sh  setup.sh
install/go2_description/share/go2_description/: package.sh  package.xml
install/go2_description/share/go2_description/cmake/: go2_descriptionConfig.cmake
install/go2_description/share/go2_description/config/: control1.yaml  gazebo_bridge.yaml  joint_names_go2_description.yaml  robot_control.yaml
install/go2_description/share/go2_description/launch/: go2_rviz.launch  rviz.launch
install/go2_description/share/go2_description/rviz/: go2_new.rviz
install/go2_description/share/go2_description/sdf/: plugins.xacro  world.sdf
install/go2_description/share/go2_description/urdf/: d435.urdf.xacro  go2_description.urdf.xacro  test.urdf.xacro  test2.urdf.xacro  testing.urdf.xacro
install/go2_description/share/go2_description/urdf/.history/: go2_description_20230904144240.urdf
install/go2_description/share/go2_description/xacro/: gazebo123.xacro  leg.xacro  lidar.xacro  robot.xacro  velodyne.xacro
install/realsense2_description/share/realsense2_description/: package.sh
install/realsense2_description/share/realsense2_description/urdf/: test_d405_camera.urdf.xacro
log/: latest_build
